Updated notebooks and tested for python 3.6 and scikit-learn 0.23
- updated requirements.txt file also

--- a/Pre-Workshop/Tutorial 1 - SVM.ipynb
+++ b/Pre-Workshop/Tutorial 1 - SVM.ipynb
@@ -31,25 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import required stuff.\n",
     "\n",
     "import numpy as np \n",
-    "from sklearn import preprocessing, cross_validation, neighbors, svm\n",
+    "\n",
+    "#before sklearn 0.18\n",
+    "# from sklearn import preprocessing, cross_validation, neighbors, svm\n",
+    "\n",
+    "from sklearn import preprocessing, neighbors, svm\n",
+    "from sklearn.model_selection import cross_validate, train_test_split\n",
     "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read the required data. \n",
@@ -66,10 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get the features and labels.\n",
@@ -79,23 +78,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use a random 80-20 split of data for training and testing resp.\n",
-    "X_train, X_test, y_train, y_test = cross_validation.train_test_split(X,y,test_size=0.2)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using scikit learn's SVM function\n",
     "clf = svm.SVC()\n",
@@ -104,11 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6428571428571429\n"
+     ]
+    }
+   ],
    "source": [
     "# Finding the accuracy. Not bad, huh ??\n",
     "accuracy = clf.score(X_test, y_test)\n",
@@ -117,11 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Finding out the prediction of this SVM classifier on new data points. \n",
     "# Here [4,2,1,1,1,2,3,2,1] and [4,2,1,2,2,2,3,2,1] are the two data points\n",
@@ -143,25 +161,32 @@
     "  1. What do you think is the significance of this line `df.drop(['id'], 1, inplace=True)` in the above example. Run the above program by commenting out this line. What do you observe and why?\n",
     "  2. Do you observe any difference in accuracy or predictions of SVM and k-NN classifier."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
