--- a/Pre-Workshop/Tutorial 2.2 - K Nearest Neighbours.ipynb
+++ b/Pre-Workshop/Tutorial 2.2 - K Nearest Neighbours.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import required stuff.\n",
@@ -41,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# k nearest neighbors function.\n",
@@ -71,25 +67,23 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('correct: ', 134)\n",
-      "('total: ', 139)\n",
-      "('correct: ', 135)\n",
-      "('total: ', 139)\n",
-      "('correct: ', 135)\n",
-      "('total: ', 139)\n",
-      "('correct: ', 135)\n",
-      "('total: ', 139)\n",
-      "('correct: ', 133)\n",
-      "('total: ', 139)\n",
-      "0.96690647482\n"
+      "correct:  130\n",
+      "total:  139\n",
+      "correct:  132\n",
+      "total:  139\n",
+      "correct:  138\n",
+      "total:  139\n",
+      "correct:  133\n",
+      "total:  139\n",
+      "correct:  135\n",
+      "total:  139\n",
+      "0.9611510791366907\n"
      ]
     }
    ],
@@ -152,21 +146,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
